--- a/beats.html
+++ b/beats.html
@@ -20,9 +20,9 @@
     <nav class="nav">
         <ul>
             <li><a href="https://ronix014.github.io/landing-page/landing%20page.html?fbclid=IwZXh0bgNhZW0CMTEAAR2QALY3FcftP2mDmCNpyXOLleqGLvjBSOI06Cv1w8Ryqaf0sfiKkIT0eag_aem_CkEXMXnXdrxMKc1Wbkb_aA#">Home</a></li>
-            <li><a href="photo gallery.html">Photo Gallery</a></li>
+            <li><a href="https://ronix014.github.io/photo-gallery/photo%20gallery.html">Photo Gallery</a></li>
             <li class="active"><a href="beats.html">Beats Compilation</a></li>
-            <li><a href="films.html">My Favorite Films</a></li>
+            <li><a href="https://ronix014.github.io/films/films.html#top">My Favorite Films</a></li>
         </ul>
     </nav>
 
@@ -33,19 +33,19 @@
                 <div class="audio-item">
                     <p><strong>GFRIEND (여자친구) 'MAGO'</strong></p>
                     <audio controls>
-                        <source src="songs\GFRIEND (여자친구) 'MAGO' Official MV [ ezmp3.cc ].mp3"" type="audio/mpeg">
+                        <source src="GFRIEND (여자친구) 'MAGO' Official MV [ ezmp3.cc ].mp3"" type="audio/mpeg">
                     </audio>
                 </div>
                 <div class="audio-item">
                     <p><strong>IVE 아이브 'Off The Record'</strong></p>
                     <audio controls>
-                        <source src="songs\IVE 아이브 'Off The Record' MV [ ezmp3.cc ].mp3"" type="audio/mpeg">
+                        <source src="IVE 아이브 'Off The Record' MV [ ezmp3.cc ].mp3"" type="audio/mpeg">
                     </audio>
                 </div>
                 <div class="audio-item">
                     <p><strong>fromis_9 (프로미스나인) 'DM'</strong></p>
                     <audio controls>
-                        <source src="songs\fromis_9 (프로미스나인) 'DM' Official MV [ ezmp3.cc ].mp3"" type="audio/mpeg">
+                        <source src="fromis_9 (프로미스나인) 'DM' Official MV [ ezmp3.cc ].mp3"" type="audio/mpeg">
                     </audio>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                     <div class="audio-item">
                         <p><strong>Ben&Ben - Paninindigan Kita</strong></p>
                         <audio controls>
-                            <source src="songs/Ben&Ben - Paninindigan Kita _ Official Lyric Video [ ezmp3.cc ].mp3" type="audio/mpeg">
+                            <source src="Ben&Ben - Paninindigan Kita _ Official Lyric Video [ ezmp3.cc ].mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -67,7 +67,7 @@
                 <div class="audio-item">
                     <p><strong>Cueshé - Pangako (Album: Nevermind)</strong></p>
                     <audio controls>
-                        <source src="songs/Cueshé - Pangako [ ezmp3.cc ].mp3" type="audio/mpeg">
+                        <source src="Cueshé - Pangako [ ezmp3.cc ].mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </div>
@@ -76,7 +76,7 @@
                 <div class="audio-item">
                     <p><strong>Kay Tagal Kitang Hinintay (Live at The Cozy Cove) - Sponge Cola - </strong></p>
                     <audio controls>
-                        <source src="songs/Kay Tagal Kitang Hinintay (Live at The Cozy Cove) - Sponge Cola [ ezmp3.cc ].mp3" type="audio/mpeg">
+                        <source src="Kay Tagal Kitang Hinintay (Live at The Cozy Cove) - Sponge Cola [ ezmp3.cc ].mp3" type="audio/mpeg">
                     </audio>
                 </div>
             </div>
@@ -88,19 +88,19 @@
                 <div class="audio-item">
                     <p><strong>Queens Of The Stone Age - In My Head</strong></p>
                     <audio controls>
-                        <source src="songs\Queens Of The Stone Age - In My Head [ ezmp3.cc ].mp3"" type="audio/mpeg">
+                        <source src="Queens Of The Stone Age - In My Head [ ezmp3.cc ].mp3"" type="audio/mpeg">
                     </audio>
                 </div>
                 <div class="audio-item">
                     <p><strong>Pamungkas - To The Bone</strong></p>
                     <audio controls>
-                        <source src="songs\Pamungkas - To The Bone (Official Music Video) [ ezmp3.cc ].mp3"" type="audio/mpeg">
+                        <source src="Pamungkas - To The Bone (Official Music Video) [ ezmp3.cc ].mp3"" type="audio/mpeg">
                     </audio>
                 </div>
                 <div class="audio-item">
                     <p><strong>Carpenters - Love Me For What I Am</strong></p>
                     <audio controls>
-                        <source src="songs\Love Me For What I Am [ ezmp3.cc ].mp3"" type="audio/mpeg">
+                        <source src="Love Me For What I Am [ ezmp3.cc ].mp3"" type="audio/mpeg">
                     </audio>
                 </div>
             </div>
