--- a/beats.html
+++ b/beats.html
@@ -104,6 +104,7 @@
                     </audio>
                 </div>
             </div>
+            <p><a href="#top" class="btn">Go to Top</a></p>
         </section>
     </div>
 </body>
