--- a/beats.html
+++ b/beats.html
@@ -14,6 +14,7 @@
         <i class="fa-solid fa-headphones" style="color: #cf87f8;"></i>
         <h1 style="margin: 0;">My Kind of Beats</h1>
         <i class="fa-solid fa-headphones" style="color: #cf87f8;"></i>
+        <body id="top">
     </header>
     
 
