--- a/beats.html
+++ b/beats.html
@@ -53,7 +53,7 @@
 
     <!-- OPM Category -->
     <section>
-        <h2>Opm</h2>
+        <h2>OPM</h2>
         <div class="audio-section">
             <div class="audio-item">
                 <p><strong>Ben&Ben - Paninindigan Kita</strong></p>
