--- a/beats.html
+++ b/beats.html
@@ -12,9 +12,9 @@
 <body id="top"> <!-- Added ID for Back to Top Button -->
 
     <header style="display: flex; align-items: center; justify-content: center; gap: 10px;">
-        <i class="fa-solid fa-headphones" style="color: #cf87f8;"></i>
+        <i class="fa-solid fa-headphones" style="color: #cf87f8; margin-right: 10px;"></i>
         <h1 style="margin: 0;">My Kind of Beats</h1>
-        <i class="fa-solid fa-headphones" style="color: #cf87f8;"></i>
+        <i class="fa-solid fa-headphones" style="color: #cf87f8; margin-left: 10px;"></i>
     </header>
 
     <nav class="nav">
