--- a/beats.html
+++ b/beats.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Beats</title>
-    <link rel="stylesheet" href="beats.css">
+    <link rel="stylesheet" href="test1.css">
     <script src="https://kit.fontawesome.com/a48451008c.js" crossorigin="anonymous"></script>
 </head>
 
-<body id="top"> <!-- Added ID for Back to Top Button -->
+<button id="backToTop" onclick="scrollToTop()">Back to Top</button>
 
     <header style="display: flex; align-items: center; justify-content: center; gap: 10px;">
         <i class="fa-solid fa-headphones" style="color: #cf87f8; margin-right: 10px; font-size: 30px;"></i>
         <h1 style="margin: 0;">My Kind of Beats</h1>
         <i class="fa-solid fa-headphones" style="color: #cf87f8; margin-left: 10px; font-size: 30px;"></i>
+
     </header>
 
     <nav class="nav">
